Support given classes again